--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -3,6 +3,7 @@
     --mainFz: 16px;
     --mainColor: #73a4d2;
     --colorSuccess: #b1ecbb;
+    --colorEdit: #ece8b1;
     --colorDelete: #ecb1b1;
     --mainSecondColor: white;
 }
@@ -51,9 +52,9 @@ h1 {
     transition: 0.3s all ease;
 }
 
-.btn:hover:not(.btn--delete, .btn--success),
-.btn:active:not(.btn--delete, .btn--success),
-.btn:focus:not(.btn--delete, .btn--success) {
+.btn:hover:not(.btn--delete, .btn--success, .btn--edit),
+.btn:active:not(.btn--delete, .btn--success, .btn--edit),
+.btn:focus:not(.btn--delete, .btn--success, .btn--edit) {
     opacity: 1;
     background: var(--mainColor) !important;
     color: var(--mainSecondColor) !important;
@@ -68,6 +69,10 @@ h1 {
 .btn--delete {
     color: var(--mainColor) !important;
     background: var(--colorDelete) !important;
+}
+.btn--edit {
+    color: var(--mainColor) !important;
+    background: var(--colorEdit) !important;
 }
 @keyframes pingText {
     from {
