--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -74,6 +74,26 @@ h1 {
     color: var(--mainColor) !important;
     background: var(--colorEdit) !important;
 }
+.v-enter-active,
+.v-leave-active {
+    transition: opacity 0.5s ease;
+}
+
+.v-enter-from,
+.v-leave-to {
+    opacity: 0;
+}
+.list-move, /* apply transition to moving elements */
+.list-enter-active,
+.list-leave-active {
+    transition: all 0.3s ease;
+}
+.list-enter-from,
+.list-leave-to {
+    opacity: 0;
+    transform: translateX(30px);
+}
+
 @keyframes pingText {
     from {
         -webkit-text-stroke: 0.0625rem var(--mainColor);
